fix: report available node resources based on optional label and schedulable